# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1251 2010-07-15 06:12:49 mp Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta1 (2010/??/??)
 - (2010/07/14) Fixed bug#5132 - New owner validation always ask to set a owner.
 - (2010/07/14) Fixed bug#5343 - Widespread typo in Agent-/CustomerPreferences - replaced "Activ"
                for "Active".
 - (2010/07/13) Fixed bug#5550 - Broken linebreaks in textareas of Google Chrome.
 - (2010/07/09) Fixed bug#5545 - LIKE pattern must not end with escape character.
 - (2010/07/09) Fixed bug#5494 - Handle attachments with java script.
 - (2010/07/09) Fixed bug#5544 - Wrong handling of underscore in LIKE
    search with oracle.
 - (2010/07/06) Removed AgentLookup (was not used in OTRS framework itself
     and is not state of the art of dealing with dynamic data any more).
 - (2010/07/01) Streamlined messages in AgentTicketBulk.
 - (2010/07/01) Added option to ticket bulk action to define if tickets for bulk
    action need to get locked for current agent or not.
     o Config Name: Ticket::Frontend::AgentTicketBulk###RequiredLock
    Thanks to Jeroen van Meeuwen!
 - (2010/06/22) Improved otrs.CheckModules.pl script.
 - (2010/06/22) Updated CPAN module Authen::SASL to version 2.15.
 - (2010/06/22) Updated CPAN module Net::IMAP::Simple to version 1.1916.
 - (2010/06/22) Updated CPAN module MIME::Tools to version 5.428.
 - (2010/06/22) Updated CPAN module Net::POP3::SSLWrapper to version 0.04.
 - (2010/06/22) Updated CPAN module XML::Parser to version 0.712.
 - (2010/06/22) Updated CPAN module Text::CSV to version 1.18.
 - (2010/06/14) New DirectoryRead Function to read filenames with Unicode::Normalize
 - (2010/06/09) Fixed bug#5447 - Added SMTP TLS support, to send out emails via